--- a/index.html
+++ b/index.html
@@ -100,28 +100,28 @@
                         <p class="paragraph team">Product Designer</p>
                         <ul class="master-social">
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1" class=""></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -137,28 +137,28 @@
                         <p class="paragraph team">Frontend Developer</p>
                         <ul class="master-social">
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter-1" class=""></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -174,28 +174,28 @@
                         <p class="paragraph team">Marketing</p>
                         <ul class="master-social">
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1" class=""></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
@@ -211,28 +211,28 @@
                         <p class="paragraph team">UI Designer</p>
                         <ul class="master-social">
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        <use href="./images/icons.svg#icon-twitter-1" class=""></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
-                                <a href="">
+                                <a href="" class="list-item-social-link">
                                     <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
