--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="header-container">
         <a href="./index.html" class="logo">Web<span class="dark-logo">Studio</span></a>
         <ul class="header-list">
-            <li><a href="./index.html" class="header-menu">Studio</a></li>
+            <li><a href="./index.html" class="header-menu curent">Studio</a></li>
             <li><a href="" class="header-menu">Portfolio</a></li>
             <li><a href="" class="header-menu">Contacts</a></li>
         </ul>
@@ -250,62 +250,62 @@
         <ul class="portfolio-list">
             <li class="portfolio-item">
                 <div class="portfolio-item-wrap">
-                <img src="./images/banking.jpg" alt="online-banking" width="360" height="300" class="img img-bank"/>
-                <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-            </div>
+                    <img src="./images/banking.jpg" alt="online-banking" width="360" height="300" class="img img-bank"/>
+                    <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 <div class="portfolio-text">
-                <h3 class="master-portfolio">Banking App</h3>
-                <p class="paragraph">App</p>
+                    <h3 class="master-portfolio">Banking App</h3>
+                    <p class="paragraph">App</p>
+                </div>
                 </div>
             </li>
             <li class="portfolio-item">
                 <div class="portfolio-item-wrap">
                 <img src="./images/applepay.jpg" alt="payment with phone" width="360" height="300" class="img img-pay"/>
                 <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Cashless Payment</h3>
                 <p class="paragraph">Marketing</p>
+                </div>
                 </div>
             </li>
             <li class="portfolio-item">
                 <div class="portfolio-item-wrap">
                 <img src="./images/laptop.jpg" alt="laptop" width="360" height="300" class="img img-app"/>
                 <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Meditation App</h3>
                 <p class="paragraph">App</p>
+                </div>
                 </div>
             </li>
             <li class="portfolio-item">
                 <div class="portfolio-item-wrap">
                 <img src="./images/auto.jpg" alt="auto driving" width="360" height="300" class="img img-taxi"/>
                 <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Taxi Service</h3>
                 <p class="paragraph">Marketing</p>
+                </div>
                 </div>
             </li>
             <li class="portfolio-item">
                 <div class="portfolio-item-wrap">
                 <img src="./images/phone.jpg" alt="illustrations on phone" width="360" height="300" class="img img-screen"/>
                 <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Screen Illustrations</h3>
                 <p class="paragraph">Design</p>
+                </div>
                 </div>
             </li>
             <li class="portfolio-item">
                 <div class="portfolio-item-wrap">
                 <img src="./images/frau.jpg" alt="women in orange pullower" width="360" height="300" class="img img-frau"/>
                 <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Online Courses</h3>
                 <p class="paragraph">Marketing</p>
+                </div>
                 </div>
             </li>
         </ul>
